zkay/examples/type_errors/RepeatedAddhom.zkay
pragma zkay >=0.2.0;

contract RepeatedAddhom {

	function f(uint@me a) public {
		uint@me<+> x = addhom(addhom(a));
	}
}
